	  that treeview rows are only created if the element in question is not an
	  invalid one.
	* tools/expack.cc: Expack now extracts to files with 5-digit numbers, as per
	  #3163084 "Expack cannot repack extracted files using a wildcard"; however,
	  this does not mean wildcards will work in non-POSIX shells. Fixed segfault
	  when extracting from a flex file due to double delete.
	
2012-12-12	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* audio/Midi.cc: Fixing segfault when you change the Midi device type and
	  disable midi in one go.
	
2012-12-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc: Reverting revision 7197 as it can sometimes cause the mouse to
	  lock on the center of the screen. A better workaround for touchpad issues
	  for now is to disable full-screen fast mouse.
	* conf/Configuration.cc: Checking for absolute paths after translating any
	  system paths.
	* files/utils.cc: Consolidating some duplicate code. Spaces to tabs. System
	  paths can now be recursively defined, so putting "<HOME>" as a path in
	  exult.cfg will correctly translate if used in the definition of other
	  system paths (if correctly escaping < and > as &lt; and &gt; for XML).
	  Added a few security features for recursive system paths, such as a cap
	  to the recursion depth.

2012-12-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* keyactions.cc: Toggling fullscreen displays a timed popup asking if you
	  want to keep the change or not. If yes, config is saved; if not, then full
	  screen is toggled back.

2012-12-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exultmenu.cc: Fixing now relevant double-free in menu.
	* gamewin.cc: Clear the time queue before deleting unused NPCs (just in case).
	* tqueue.*, objs/animate.*: Fixed leak when loading game while an object is
	  playing SFX through Object_sfx; using time queue for it as it has the only
	  reference to the object.
	* gumps/AudioOptions_gump.cc: Memory leak on two buttons when enabling or